[gd_scene load_steps=6 format=2]

[ext_resource path="res://grid/Face.tscn" type="PackedScene" id=1]
[ext_resource path="res://grid/Grid.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -4, -4, 0, 8, 8, 1e-05 ),
"array_data": PoolByteArray( 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -4, -4, 0, 8, 8, 1e-05 ),
"array_data": PoolByteArray( 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -4, -4, 0, 8, 8, 1e-05 ),
"array_data": PoolByteArray( 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 64, 64, 0, 0, 0, 0, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[node name="Grid" type="Spatial"]
script = ExtResource( 2 )

[node name="FaceDepth" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
mesh = SubResource( 1 )
grid_width = 8
grid_height = 8

[node name="FaceHeight" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -4, 0 )
mesh = SubResource( 2 )
grid_width = 8
grid_height = 8

[node name="FaceWidth" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -4, 0, 0 )
mesh = SubResource( 3 )
grid_width = 8
grid_height = 8
